--- a/src/cn/scau/zfm/html/index.html
+++ b/src/cn/scau/zfm/html/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>主页</title>
+	<meta charset="UTF-8">
+	<title>Home</title>
 </head>
 <body>
-	<h1>主页</h1>
+	<h1>Login Successfully!</h1>
 </body>
 </html>
