--- a/src/cn/scau/zfm/html/login.html
+++ b/src/cn/scau/zfm/html/login.html
@@ -8,7 +8,7 @@
 	<form action="http://localhost:8081/login" method="POST" >
 		UID ：<input type="text" name="user" id="user" required /><br>
 		Pwd：<input type="text" name="password" id="password" required />
-		<input type="submit" name="" value="Submit" style="margin-left: 20px;">
+		<input type="submit" name="" value="Submit" style="margin-left: 20px;" />
 	</form>
 </body>
 </html>
